# resonancepy

./: .gitignore  README.md  pyproject.toml
docs/: improvements.md  overview.md  package_structure.md  user_guide.md
notebooks/: demo.ipynb
src/resonance_py/data_analysis/: __init__.py  artifacts.py  circle_fitting.py  modeling.py  power_fit.py  res_iS21_fit_function.py  resonator_data.py  snr_metrics.py
src/resonance_py/drivers/: SetAttenuation.py  keysightE5072A.py  keysightN5221B.py  simulatedVNA.py
src/resonance_py/drivers/attenuator/: __init__.py  simulated_attenuator.py
src/resonance_py/drivers/vna/: base_vna.py
src/resonance_py/drivers/vna_manuals/: E5071B_commands.csv
src/resonance_py/measurements/: resonatorMeasurement.py
src/resonance_py/utils/: __init__.py  logging_utils.py  peak_analysis.py  segmentation.py  statistics.py
src/resonance_py/utils/sim/: resonator_response.py
