[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance-py"          # the published PyPI name (kebab‑case)
version = "0.1.0"
description = "Drivers, analysis, and measurement tooling for superconducting resonators"
authors = [{ name = "LaBEQ", email = "mforest@umd.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

# Core runtime dependencies
dependencies = [
  "numpy>=1.22",
  "scipy>=1.10",
  "matplotlib>=3.8",
  "h5py>=3.10",
  "qcodes>=0.45",   # pin to a version your drivers work with
  "lmfit>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "ipykernel",
  "jupyterlab",
  "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]          # look only inside ./src
